test/sample/simple2.c
int main(void)
{
  return 0; //no error
//  return 1; //error
}
